Fix some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ header h1 {
   padding: 0 50px;
 }
 
-header p {
+header .header-p {
   line-height: 3rem;
   font-size: 20px;
   padding: 0 50px;
@@ -47,16 +47,11 @@ nav ul {
     display: flex;
     align-items: center;
     height: 10vh;
-    width: 100vw;
+    width: 100%;
     top: 0;
     position: fixed;
     border-bottom: 3px solid white;
-    padding: 0 50px;
-  }
-
-  nav ul img {
-    display: block;
-    height: 8vh;
+    padding: 0 25px;
   }
 
   nav ul li {
@@ -64,13 +59,15 @@ nav ul {
     color: white;
     border: 2px solid rgba(255, 255, 255, 0.05);
     background: rgba(255, 255, 255, 0.05);
-    height: 7vh;
+    height: max-content;
+    width: 14vh;
     border-radius: 10px;
     font-weight: bold;
     margin: 0 10px;
   }
 
   nav ul li p {
+    padding: 15px 0;
     font-size: 20px;
   }
 
@@ -78,6 +75,11 @@ nav ul {
     background: white;
     color: black;
     cursor: pointer;
+  }
+
+  nav ul img {
+    display: block;
+    height: 8vh;
   }
 }
 
